Se agregó funcionalidades de agregar, editar y eliminar productos

--- a/src/app/componentes/dashboard/dashboard.component.html
+++ b/src/app/componentes/dashboard/dashboard.component.html
@@ -81,11 +81,8 @@
 
           </mat-expansion-panel-header>
           <div class="div-lista-datos">
-            <a routerLink="producto" >Registrar Producto</a>
-            <a routerLink="producto/edit-producto" routerLinkActive="item-estado">Editar Producto</a>
-            <a routerLink="producto/search-producto" routerLinkActive="item-estado">Buscar Producto</a>
-            <a routerLink="producto/delete-producto" routerLinkActive="item-estado">Eliminar Producto</a>
-            <a routerLink="producto/list-producto" routerLinkActive="item-estado">Todos los Producto</a>
+            <a routerLink="producto" >Gestionar Productos</a>
+            <a routerLink="producto/list-delete-producto" routerLinkActive="item-estado">Producto eliminados</a>
           </div>
         </mat-expansion-panel>
         
