--- a/src/app/componentes/productos/producto-delete/producto-delete.component.html
+++ b/src/app/componentes/productos/producto-delete/producto-delete.component.html
@@ -1,6 +1,56 @@
-<div class="div-contenido">
+<div class="container">
+  <div class="div-header">
     <h4>Eliminar Producto</h4>
-    <mat-divider></mat-divider>
-
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
+  <mat-divider></mat-divider>
 
+  <form class="data-form mt-3" novalidate (ngSubmit)="eliminarPro()" [formGroup]="producto">
+    <div class="container">
+      <div class="orden-form">
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Nombre del producto</mat-label>
+          <input type="text" matInput formControlName="nombre">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Código de barra</mat-label>
+          <input type="text" matInput formControlName="codigoBarra">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Cantidad</mat-label>
+          <input type="text" matInput formControlName="cantidadUnitaria">
+        </mat-form-field>
+      </div>
+      <div class="clearfix"></div>
+      <div class="orden-form">
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Cédula del Vendedor</mat-label>
+          <input type="text" matInput formControlName="cedula">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Nombres del Vendedor</mat-label>
+          <input type="text" matInput formControlName="nombres">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Apellidos del Vendedor</mat-label>
+          <input type="text" matInput formControlName="apellidos">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Fecha de ingreso</mat-label>
+          <input type="text" matInput formControlName="fechaIngreso">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Número de acta</mat-label>
+          <input type="text" matInput formControlName="numero_acta">
+        </mat-form-field>
+      </div>
+      <div class="div-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal" #closet>Cancelar</button>
+          <button type="submit" type="submit" class="btn btn-secondary">Eliminar Producto</button>
+      </div>
+    </div>
+  </form>
+
+</div>
