--- a/src/app/componentes/productos/producto-list/producto-list.component.css
+++ b/src/app/componentes/productos/producto-list/producto-list.component.css
@@ -28,6 +28,7 @@
 
 th{
     background-color: #f1f3f4;
+    font-size: 13px;
 }
 
 .table {
@@ -47,10 +48,21 @@ td{
 
 .anchotd{
     margin: 0 auto !important;
-    width: 10px !important;
+   /* width: 10px !important; */
 }
-.anchot{
-    width: 16% !important;
+
+.editButton{
+    padding: 0px 0px 0px 0px !important;
+    margin: 2px 6px 2px 0px !important;
+    width: 4vh;
+}
+.mat-form-field{
+    width : 90% !important;
+}
+.div-search-button{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 
