--- a/src/app/componentes/productos/list-to-product-delete/list-to-product-delete.component.html
+++ b/src/app/componentes/productos/list-to-product-delete/list-to-product-delete.component.html
@@ -1,7 +1,107 @@
 <div class="div-contenido">
+  <ngx-alerts></ngx-alerts>
     <h4>Lista de Productos Eliminados</h4>
     <mat-divider></mat-divider>
-
+    <div class="container table-responsive mt-2 ">
+        <div >
+          <form *ngIf="data">
+            <mat-form-field>
+              <mat-label>Buscar Producto</mat-label>
+              <input matInput placeholder="Ingrese Cédula de vendedor" [(ngModel)]="filtro" name="filtro">
+            </mat-form-field>
+          </form>
+        </div>
+        <table class="table table-bordered  table-responsive">
+            <thead>
+                <tr>
+                    <th scope="col" class="anchotd">Producto</th>
+                    <th scope="col" class="anchotd">Codigo Barra</th>
+                    <th scope="col" class="anchotd">Cantidad</th>
+                    <th scope="col" class="anchotd">Cedula</th>
+                    <th scope="col" class="anchotd">Nombres</th>
+                    <th scope="col" class="anchotd">Apellidos</th>
+                    <th scope="col" class="anchotd">Fecha Eliminación</th>
+                    <th scope="col" class="anchotd">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <div *ngIf="data; then data1 else sinData"></div>
+                <ng-template #data1>
+                    <tr *ngFor="let fila of datos|search:filtro  | paginate:page_size:page_number">
+                        <td>{{fila.nombre}}</td>
+                        <td>{{fila.codigoBarra}}</td>
+                        <td>{{fila.cantidadUnitaria}}</td>
+                        <td>{{fila.cedula}}</td>
+                        <td>{{fila.nombres}}</td>
+                        <td>{{fila.apellidos}}</td>
+                        <td class="fecha-delete">{{fila.deleted_at|date:'medium' }}</td>
+                        <td >
+                          <button class="btn btn-warning editButton" title="Restaurar Vendedor" data-toggle="modal" data-target="#modalRestaurar" 
+                        (click)="dataModal(fila)">
+                          <mat-icon class="edIcon">restore</mat-icon>
+                        </button>
+                        </td>
+                    </tr>
+                </ng-template>
+                <ng-template #sinData >
+                    <tr class="sinDatos">
+                        <td colspan="8">Sin datos</td>
+                    </tr>
+                </ng-template>
+  
+  
+            </tbody>
+        </table>
+        <div class="container div-button" *ngIf="data">
+          <button class="btn btn-dark btn-sm">
+            Exportar a excel
+          </button>
+        </div>
+        <mat-paginator *ngIf="data" [length]="[datos.length]" [pageSize]="page_size" [pageSizeOptions]="[5, 10,20,50, 100]"
+          (page)="paginator($event)" showFirstLastButtons>
+        </mat-paginator>
+    
+      </div>
 
 </div>
+<ngx-spinner type="ball-spin-clockwise">
+  <p style="font-size: 20px; color: white">Cargando...</p>
+</ngx-spinner>
+
+<!-- Modal  Restarurar Vendedor-->
+<div class="modal fade" id="modalRestaurar" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">¿Desea restaurar Vendedor?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="body-modal" class="div-modal">
+        <div>
+          <p ><strong>Producto:  </strong></p>
+          <p ><strong>Código de barra:  </strong></p>
+          <p ><strong>Cantidad:  </strong></p>
+          <p ><strong>Cédula:  </strong></p>
+          <p ><strong>Nombres:  </strong></p>
+          <p ><strong>Apellidos:  </strong></p>
+        </div>
+
+        <div class="div-modal">
+          <p>{{producto}}</p>
+          <p>{{codigoBarra}}</p>
+          <p>{{cantidad}}</p>
+          <p>{{cedula}}</p>
+          <p>{{nombres}}</p>
+          <p>{{apellidos}}</p>        
+        </div>    
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-danger" data-dismiss="modal" #closemodal>No</button>
+      <button type="submit" class="btn btn-secondary" (click)="restoreProduct()">Si</button>
+    </div>
+  </div>
+</div>
+
 
